<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/timer_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:text="@string/match_time"
            android:textColor="#000"
            android:textSize="50sp" />

        <TextView
            android:id="@+id/status"
            style="@style/team_name"
            android:layout_below="@+id/timer_text"
            android:layout_marginBottom="16dp"
            android:text="@string/status"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/score_Card_View"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/timer_text"
            android:layout_marginTop="44dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/team_A_layout"
                style="@style/score_card_layout">

                <TextView
                    style="@style/team_name"
                    android:text="@string/team_A_text" />

                <TextView
                    android:id="@+id/team_A_score"
                    style="@style/score_style"
                    android:text="@string/starting_score" />

                <Button
                    android:id="@+id/team_A_Goal"
                    style="@style/points_Button"
                    android:onClick="goal_for_A"
                    android:text="@string/goal" />

                <Button
                    android:id="@+id/team_A_foul"
                    style="@style/points_Button"
                    android:onClick="foul_for_A"
                    android:text="@string/foul" />
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:background="#000000">
            </View>

            <LinearLayout
                android:id="@+id/team_B_layout"
                style="@style/score_card_layout">

                <TextView
                    style="@style/team_name"
                    android:text="@string/team_B_text" />

                <TextView
                    android:id="@+id/team_B_score"
                    style="@style/score_style"
                    android:text="@string/starting_score" />

                <Button
                    android:id="@+id/team_B_Goal"
                    style="@style/points_Button"
                    android:onClick="goal_for_B"
                    android:text="@string/goal" />

                <Button
                    android:id="@+id/team_B_foul"
                    style="@style/points_Button"
                    android:onClick="foul_for_B"
                    android:text="@string/foul" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/score_Card_View"
            android:layout_marginTop="24dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/timerButton"
                style="@style/points_Button"
                android:layout_weight="1"
                android:onClick="startStop"
                android:text="@string/start_btn_txt" />

            <Button
                android:id="@+id/reset"
                style="@style/points_Button"
                android:layout_weight="1"
                android:onClick="reset_score"
                android:text="@string/reset" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>